# appleproof

./: .gitignore  zkvm-ds.md  zkvm-gpt.md  zkvm实战.md
applemodel/: go.mod  infer.py  main.go  train.py
lib/: Cargo.toml  build.rs
lib/src/: lib.rs
lib/src/model/: apple_detector.rs  mod.rs
program/: Cargo.toml  build.rs
program/src/: main.rs
program/src/model/: apple_detector.rs  mod.rs
script/: Cargo.toml
