[package]
version = "0.1.0"
name = "appleproof-script"
edition = "2021"
default-run = "appleproof"

[[bin]]
name = "appleproof"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "5.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
dotenv = "0.15.0"
burn = { version = "0.17.1",  default-features = false, features = ["ndarray"] } # Backend must be ndarray
image = "0.24"
appleproof-lib = { path = "../lib" }

[build-dependencies]
sp1-build = "5.0.0"
